--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -15,6 +15,10 @@
   --ifm-color-primary-lightest: #007DA6;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+
+  .hero__title {
+    color: black;
+  }
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -27,4 +31,17 @@
   --ifm-color-primary-lighter: #007DA6;
   --ifm-color-primary-lightest: #007DA6;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+
+  .hero__title {
+    color: white;
+  }
+}
+
+.hero--primary {
+  background-color: transparent;
+  height: 100vh;
+}
+
+.button--secondary {
+  border-radius: 1rem;
 }
