--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -42,6 +42,8 @@
   height: 100vh;
 }
 
-.button--secondary {
+.button.button--secondary {
+  color: wheat;
   border-radius: 1rem;
+  background-color: #007DA6;
 }
