--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,10 +1,3 @@
-/**
- * Any CSS included here will be global. The classic template
- * bundles Infima by default. Infima is a CSS framework designed to
- * work well for content-centric websites.
- */
-
-/* You can override the default Infima variables here. */
 :root {
   --ifm-color-primary: #007DA6;
   --ifm-color-primary-dark: #007DA6;
@@ -19,10 +12,25 @@
   .hero__title {
     color: black;
   }
+
+  .hero--primary {
+    --ifm-hero-text-color: black;
+  }
+
+  .hero-color {
+    color: rgb(150, 150, 150);
+  }
+
+  .button.button--secondary {
+    color: wheat;
+    border-radius: 1rem;
+    background-color: #007DA6;
+  }
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
+  color: white;
   --ifm-color-primary: #007DA6;
   --ifm-color-primary-dark: #007DA6;
   --ifm-color-primary-darker: #007DA6;
@@ -35,15 +43,19 @@
   .hero__title {
     color: white;
   }
-}
 
-.hero--primary {
-  background-color: transparent;
-  height: 100vh;
-}
+  .hero-color {
+    color: white;
+  }
 
-.button.button--secondary {
-  color: wheat;
-  border-radius: 1rem;
-  background-color: #007DA6;
+  .hero--primary {
+    background-color: transparent;
+    height: 100vh;
+  }
+
+  .button.button--secondary {
+    color: wheat;
+    border-radius: 1rem;
+    background-color: #007DA6;
+  }
 }
